fix alignment for recommended

--- a/static/css/hotels.css
+++ b/static/css/hotels.css
@@ -15,7 +15,7 @@
 }
 
 .searchWrapper {
-  height: 300px;
+  height: 250px;
   width: 100%;
   background-color: white;
   padding-top: 30px;
@@ -63,12 +63,16 @@
   border-radius: 25px;
 }
 
+.Recommended-Wrapper{
+  width:100%;
+  height: 38px;
+  padding-left: 5%;
+  margin-bottom: 25px;
+}
+
 .Recommended-Title {
-  position: absolute;
   width: 443px;
   height: 38px;
-  margin-left: 100px;
-  top: 678px;
 
   font-family: "Montserrat";
   font-style: normal;
@@ -84,7 +88,7 @@
   display: flex;
   overflow-x: auto;
   max-height: 500px;
-  margin-left: 100px;
+  padding-left: 5%;
 }
 
 .scrolling-wrapper::-webkit-scrollbar {
